# ghaz

./: .gitignore  CMakeLists.txt  build.sh
src/: main.cpp
src/goose/: mainloop.cpp  mainloop.hpp  taskdb.cpp  taskdb.hpp
src/graphics/: goose.cpp  goose.hpp  graphic.cpp  graphic.hpp
src/tasks/: mudTrack.cpp  mudTrack.hpp  nabMouse.cpp  nabMouse.hpp  runMouse.cpp  runMouse.hpp  runOffscreen.cpp  runOffscreen.hpp  task.hpp  wander.cpp  wander.hpp
src/utils/: cursor.cpp  cursor.hpp  math.cpp  math.hpp
